# Agent007

./: .gitignore  IMPLEMENTATION_PHASES.md  README.md  REVIEW.md  agent.md  package-lock.json  pyproject.toml  results.txt  start-app.txt
Loan_Agent/: .dockerignore  .env.example  Architecture.md  DEPLOY.md  Dockerfile.api  README.md  docker-compose.yaml  requirements.txt  setup_db.ps1
Loan_Agent/DB/: seed_test_cases.sql
Loan_Agent/loan-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
Loan_Agent/loan_agent/: __init__.py  applicants.py  config.py  db.py  tool_registry.py
Loan_Agent/scripts/: run_seed.py
Project-plan/: Agent.md  plan.md Autonomy Boundaries (What the Ag.txt  plan.md Tool Interface Definition (Agent.txt  plan.md — Data Layer.txt  plan.md — Service Layer.txt  project loan plan.txt
agent-ui/: index.html  package-lock.json  package.json
agent-ui/src/: App.css  App.tsx  index.css
agentic_app/: __init__.py  app.py
agentic_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_app/agent/: agent.py  planner.py  prompt.py  state.py
agentic_app/api/: __init__.py  server.py
docs/: agent.md  api_contracts.md  architecture.md  data_models.md  execution_flow.md  repo_index.md  tech_stack.md  tools.md
ops/: observability.md  security.md
planning/: feature_backlog.md  phases.md  roadmap.md
testing/: evaluation.md  test_cases.md
tests/: test_agent_with_fake_llm.py  test_app_repl.py  test_math_tools.py  test_memory_cli_sequence.py  test_memory_conversation.py  test_planning_graph.py
(+46 files in other folders)
